# argpp

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  argpp-config.cmake.in  argpp.nix  flake.nix
include/: argparser.hpp
include/argparser/: alias_item.hpp  argparser  argparser.hpp  argument.hpp  builder.hpp  callback.hpp  callback_with_arg.hpp  command_item.hpp  error.hpp  flags.hpp  from_string.hpp  fwd.hpp  item.hpp  option.hpp  option_group.hpp  parser.hpp  positional_item.hpp  printer.hpp  rest_item.hpp  rest_options_item.hpp  text_item.hpp
include/argpp/: alias_item.hpp  argparser.hpp  argpp.hpp  argument.hpp  callback.hpp  callback_with_arg.hpp  command_item.hpp  error.hpp  flags.hpp  from_string.hpp  fwd.hpp  item.hpp  option.hpp  option_group.hpp  parser.hpp  positional_item.hpp  printer.hpp  rest_item.hpp  rest_options_item.hpp  text_item.hpp
src/: argparser.cpp  command_item.cpp  option.cpp  option_group.cpp  parser.cpp  positional_item.cpp  prettyprinter.cpp  prettyprinter.hpp  printer.cpp  rest_item.cpp  rest_options_item.cpp  text_item.cpp
test/: argparser2_example.cpp  argparser_example.cpp  argparser_test.cpp  argpp_example1.cpp  argpp_example2.cpp  argpp_test.cpp  pretty_printer_test.cpp
